create additional examples for concurrent collections